--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,3 +3,10 @@
     <div><%= student.first_name + " " + student.last_name %></div>
   <% end %>
 </div>
+
+
+
+<h1>
+  <%=@student.to_s %>
+</h1>
+
